ss6919: refactor: hotfix: change list to arrayList in ARMInstructionRoutines.java